syntax = "proto3";
option java_package = "com.example";
package user;

service UserService {
  rpc SaveUser (User) returns (Response);
  rpc GetUserById (UserId) returns (UserInfo);
}

message User {
  int32 id = 1;
  string username = 2;
  string fullname = 3;
}

message UserId {
  int32 id = 1;
}

message UserInfo {
  string username = 1;
  string fullname = 2;
}

message Response {
  string message = 1;
}
